2014-09-01 Added isAttempted() to Ordering module commands (previously was only as presenter API)
2014-08-29 Fixed issue with Drawing on IE 11
2014-08-29 Changed eKeyboard CustomLayout property, added new property Lock Standard Keyboard Input, added Special Characters for 3 languages
2014-08-29 Added new library Sonic.js
2014-08-29 Fixed getting score in Puzzle module
2014-08-28 Added commands for setting scoring values in Custom Scoring module
2014-08-28 Changed the parent for the masks in IWB Toolbar
2014-08-28 Fixed reaction on methods isAttempted() in Completion Progress module
2014-08-28 Fixed saving state when "Is disabled" property is selected in Table module
2014-08-27 Fixed isAttempted command visibility in Ordering module in not activity mode
2014-08-27 Added isAttempted() command to Ordering module
2014-08-27 Fixed multiple issues with Page Score Counter module
2014-08-27 Added "Calculate in real time" property to Error Counter module
2014-08-27 Added new module: Lesson Score Counter
2014-08-27 Added new module: Page Score Counter
2014-08-27 Added new module: Lesson Error Count
2014-08-26 Added "Initial image" property to Animated Page Progress module
2014-08-26 Fixed isAttempted command visibility in Text module in not activity mode
2014-08-26 Added new module: Completion Progress
2014-08-26 Added new module: Animated Lesson Progress
2014-08-26 Added permutations (safari,ie9,gecko1_8,opera)
2014-08-26 Added isVisited() method to icPlayer API
2014-08-26 New gap type in Text module - filled gap
2014-08-26 Added libraries ydp and CreateJS
2014-08-25 Fixed bug with SlideShow plays when page is closed
2014-08-22 Fixed blocking options in ShowAnswers mode and clearing styles on HideAnswers event in True/False module
2014-08-22 Fixed handling HideAnswers event in Choice module
2014-08-22 Fixed triggering work mode in modules from Check Answers module when ShowAnswers event is fired
2014-08-22 Added responding to Show Answers events in Check module