@@ -1,3 +1,6 @@
+<<<<<<< HEAD
+=======
+2014-09-01 Added getHeaderModule() method to icPlayer API
 2014-09-01 Added isAttempted() to Ordering module commands (previously was only as presenter API)
 2014-08-29 Fixed issue with Drawing on IE 11
 2014-08-29 Changed eKeyboard CustomLayout property, added new property Lock Standard Keyboard Input, added Special Characters for 3 languages
@@ -18,6 +21,7 @@
 2014-08-26 Fixed isAttempted command visibility in Text module in not activity mode
 2014-08-26 Added new module: Completion Progress
 2014-08-26 Added new module: Animated Lesson Progress
+>>>>>>> master
 2014-08-26 Added permutations (safari,ie9,gecko1_8,opera)
 2014-08-26 Added isVisited() method to icPlayer API
 2014-08-26 New gap type in Text module - filled gap
